fix: scrollbar style

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #b1b1b12f;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #6d6d6d;
+	border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
